# rust-wordle-terminal

./: Cargo.toml
src/: main.rs
